social media icons
social media icons

--- a/index.html
+++ b/index.html
@@ -43,7 +43,30 @@
 		
 		<div class="header-content-container">
 			<div class="header-main">
-				
+				<div class="social-icons">
+					<ul class="share-buttons">
+						<li>
+							<a href="https://www.facebook.com/iladimah" title="Facebook Profile" target="_blank">
+								<img alt="Facebook" src="images/flat_web_icon_set/color/Facebook.png"/>
+							</a>
+						</li>
+						<li>
+							<a href="https://www.linkedin.com/in/dimahali" target="_blank" title="LinkedIn Profile">
+								<img alt="LinkedIn" src="images/flat_web_icon_set/color/LinkedIn.png"/>
+							</a>
+						</li>
+						<li>
+							<a href="https://en.gravatar.com/hamidalikiu" target="_blank" title="WordPress Profile">
+								<img alt="WordPress" src="images/flat_web_icon_set/color/Wordpress.png"/>
+							</a>
+						</li>
+						<li>
+							<a href="mailto:d i m a h . a l i at g m a i l . c o m" target="_blank" title="Send email">
+								<img alt="Send email" src="images/flat_web_icon_set/color/Email.png"/>
+							</a>
+						</li>
+					</ul>
+				</div>
 				<h1 class="main-title">Hamid Ali</h1>
 				<p class="sub-title">Full-Stack Web Developer</p>
 			
@@ -83,16 +106,16 @@
 		<h1>Project Gallery</h1>
 		
 		<div class="row">
-			<a href="images/tOY6IhN.png"><img src="images/tOY6IhN.png" target="_blank"
-			                                  class="grid-2"></a>
-			<a href="images/L83xvs8.png"><img src="images/L83xvs8.png" target="_blank"
-			                                  class="grid-2"></a>
-			<a href="images/9iSiTnM.png"><img src="images/9iSiTnM.png" target="_blank"
-			                                  class="grid-2"></a>
-			<a href="images/OtajuGm.png"><img src="images/OtajuGm.png" target="_blank"
-			                                  class="grid-2"></a>
-			<a href="images/14uss04.png"><img src="images/14uss04.png" target="_blank"
-			                                  class="grid-2"></a>
+			<a href="images/tOY6IhN.png" target="_blank"><img src="images/tOY6IhN.png" target="_blank"
+			                                                  class="grid-2"></a>
+			<a href="images/L83xvs8.png" target="_blank"><img src="images/L83xvs8.png" target="_blank"
+			                                                  class="grid-2"></a>
+			<a href="images/9iSiTnM.png" target="_blank"><img src="images/9iSiTnM.png" target="_blank"
+			                                                  class="grid-2"></a>
+			<a href="images/OtajuGm.png" target="_blank"><img src="images/OtajuGm.png" target="_blank"
+			                                                  class="grid-2"></a>
+			<a href="images/14uss04.png" target="_blank"><img src="images/14uss04.png" target="_blank"
+			                                                  class="grid-2"></a>
 		</div>
 	
 	</div>
