target blank fix
target blank fix

--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@
 		<div class="row">
 			
 			<div class="grid-3">
-				<img src="images/p-kiu.png" class="img-thumbnail">
+				<img src="images/p-kiu.png" class="img-thumbnail" title="Karakoram International University">
 			</div>
 			
 			<div class="grid-3">
 				<h2 class="spotlight__sub-title">Karakoram International University</h2>
 				<p>Responsive Multi Lingual Website developed in WordPress and Larave</p>
-				<a href="https://www.kiu.edu.pk">View Project</a>
+				<a href="https://www.kiu.edu.pk" target="_blank">View Project</a>
 			</div>
 		
 		</div>
