--- a/index.html
+++ b/index.html
@@ -105,17 +105,12 @@
 		
 		<h1>Project Gallery</h1>
 		
-		<div class="row">
-			<a href="images/tOY6IhN.png" target="_blank"><img src="images/tOY6IhN.png" target="_blank"
-			                                                  class="grid-2"></a>
-			<a href="images/L83xvs8.png" target="_blank"><img src="images/L83xvs8.png" target="_blank"
-			                                                  class="grid-2"></a>
-			<a href="images/9iSiTnM.png" target="_blank"><img src="images/9iSiTnM.png" target="_blank"
-			                                                  class="grid-2"></a>
-			<a href="images/OtajuGm.png" target="_blank"><img src="images/OtajuGm.png" target="_blank"
-			                                                  class="grid-2"></a>
-			<a href="images/14uss04.png" target="_blank"><img src="images/14uss04.png" target="_blank"
-			                                                  class="grid-2"></a>
+		<div class="gallery__content">
+			<img src="images/tOY6IhN.png" class="gallery__photo gallery__photo--p1">
+			<img src="images/L83xvs8.png" class="gallery__photo gallery__photo--p2">
+			<img src="images/9iSiTnM.png" class="gallery__photo gallery__photo--p3">
+			<img src="images/OtajuGm.png" class="gallery__photo gallery__photo--p4">
+			<img src="images/14uss04.png" class="gallery__photo gallery__photo--p5">
 		</div>
 	
 	</div>
