--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		<h1>Intro!</h1>
 		<p>
 			I am Hamid Ali from Gilgit Pakistan, I have done BBIT from Karakoram International University and currently
-			working as Web Developer
+			working as Full-Stack Web Developer there.
 		</p>
 	
 	</div>
@@ -133,7 +133,7 @@
 			
 			<div class="grid-3">
 				<h2 class="spotlight__sub-title">Karakoram International University</h2>
-				<p>Responsive Multi Lingual Website developed in WordPress and Larave</p>
+				<p>Responsive Multi Lingual Website developed in WordPress and Laravel</p>
 				<a href="https://www.kiu.edu.pk" target="_blank">View Project</a>
 			</div>
 		
@@ -153,6 +153,7 @@
 			<p><strong>BBIT</strong></p>
 			<p>Department of Computer Science</p>
 			<p><strong>[Karakoram International University]</strong></p>
+			<p><i>2011</i> &dash;<i>2015</i></p>
 		
 		</div>
 	
@@ -174,7 +175,7 @@
 			</div>
 			<div class="grid-4">
 				<ul>
-					<li>Frontend Dsigner</li>
+					<li>Frontend Designer</li>
 					<li>Database Designer</li>
 					<li>Laravel Expert.</li>
 				</ul>
