--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                             <a href="https://www.linkedin.com/in/dimahali" target="_blank" class="bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700 transition-colors">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
-                            <a href="https://www.facebook.com/iladimah" target="_blank" class="bg-blue-800 text-white p-3 rounded-lg hover:bg-blue-900 transition-colors">
+                            <a href="https://www.facebook.com/H8A1M13I9D4/" target="_blank" class="bg-blue-800 text-white p-3 rounded-lg hover:bg-blue-900 transition-colors">
                                 <i class="fab fa-facebook-f"></i>
                             </a>
                             <a href="https://en.gravatar.com/hamidalikiu" target="_blank" class="bg-gray-600 text-white p-3 rounded-lg hover:bg-gray-700 transition-colors">
