--- a/index.html
+++ b/index.html
@@ -35,16 +35,13 @@
         }
     </script>
 
-    <!-- Google Fonts - Outfit for modern minimal look -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
 
-    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-    <!-- Custom CSS - Ultra Modern Minimal -->
     <style>
         * {
             font-family: 'Outfit', sans-serif;
@@ -166,9 +163,7 @@
 
 <body class="bg-white">
 
-    <!-- Hero Section - Ultra Modern Minimal -->
     <section class="hero-gradient min-h-screen flex items-center relative overflow-hidden">
-        <!-- Subtle background elements -->
         <div class="absolute inset-0">
             <div class="absolute top-1/4 right-1/4 w-96 h-96 bg-blue-500/10 rounded-full blur-3xl"></div>
             <div class="absolute bottom-1/4 left-1/4 w-80 h-80 bg-blue-400/5 rounded-full blur-3xl"></div>
@@ -176,7 +171,6 @@
 
         <div class="max-w-6xl mx-auto px-6 lg:px-8 relative z-10 py-20">
             <div class="flex flex-col lg:flex-row items-center gap-16">
-                <!-- Profile Image -->
                 <div class="lg:order-2 flex-shrink-0">
                     <div class="relative float-subtle">
                         <div
@@ -187,7 +181,6 @@
                     </div>
                 </div>
 
-                <!-- Hero Content -->
                 <div class="lg:order-1 text-center lg:text-left flex-1">
                     <div
                         class="inline-block px-4 py-2 bg-white/10 rounded-full text-blue-300 text-sm font-medium mb-6 animate-fade-up">
@@ -223,7 +216,6 @@
             </div>
         </div>
 
-        <!-- Scroll indicator -->
         <div class="absolute bottom-8 left-1/2 -translate-x-1/2">
             <div class="w-6 h-10 border-2 border-white/20 rounded-full flex justify-center pt-2">
                 <div class="w-1 h-2 bg-white/40 rounded-full animate-bounce"></div>
@@ -231,7 +223,6 @@
         </div>
     </section>
 
-    <!-- Stats Section -->
     <section class="py-16 bg-gray-50">
         <div class="max-w-6xl mx-auto px-6 lg:px-8">
             <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
@@ -255,7 +246,6 @@
         </div>
     </section>
 
-    <!-- About Section -->
     <section id="about" class="py-24 bg-white">
         <div class="max-w-6xl mx-auto px-6 lg:px-8">
             <div class="text-center mb-16">
@@ -294,7 +284,6 @@
         </div>
     </section>
 
-    <!-- Experience Section -->
     <section id="experience" class="py-20 bg-gray-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
@@ -303,7 +292,6 @@
             </div>
 
             <div class="space-y-8">
-                <!-- RankAlgos CTO -->
                 <div class="bg-white rounded-lg shadow-lg p-8 card-hover">
                     <div class="flex flex-col md:flex-row md:items-center md:justify-between mb-4">
                         <div>
@@ -327,7 +315,6 @@
                     </div>
                 </div>
 
-                <!-- KIU Full Stack Developer -->
                 <div class="bg-white rounded-lg shadow-lg p-8 card-hover">
                     <div class="flex flex-col md:flex-row md:items-center md:justify-between mb-4">
                         <div>
@@ -351,7 +338,6 @@
                     </div>
                 </div>
 
-                <!-- SimpleUX -->
                 <div class="bg-white rounded-lg shadow-lg p-8 card-hover">
                     <div class="flex flex-col md:flex-row md:items-center md:justify-between mb-4">
                         <div>
@@ -376,7 +362,6 @@
         </div>
     </section>
 
-    <!-- Projects Section -->
     <section id="projects" class="py-20 bg-gradient-to-b from-white to-gray-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
@@ -385,7 +370,6 @@
                     I've built</p>
             </div>
 
-            <!-- KIU University Projects -->
             <div class="mb-16">
                 <h3 class="text-2xl font-bold text-gray-900 mb-8 flex items-center justify-center gap-3">
                     <span class="icon-gradient p-2 rounded-lg"><i class="fas fa-university text-white"></i></span>
@@ -435,7 +419,6 @@
                 </div>
             </div>
 
-            <!-- Web Tools & Utilities -->
             <div class="mb-16">
                 <h3 class="text-2xl font-bold text-gray-900 mb-8 flex items-center justify-center gap-3">
                     <span class="icon-gradient p-2 rounded-lg"><i class="fas fa-tools text-white"></i></span>
@@ -489,7 +472,6 @@
                 </div>
             </div>
 
-            <!-- GPU & Performance Testing -->
             <div class="mb-16">
                 <h3 class="text-2xl font-bold text-gray-900 mb-8 flex items-center justify-center gap-3">
                     <span class="icon-gradient p-2 rounded-lg"><i class="fas fa-microchip text-white"></i></span>
@@ -532,7 +514,6 @@
                 </div>
             </div>
 
-            <!-- Islamic & Spiritual Apps -->
             <div class="mb-16">
                 <h3 class="text-2xl font-bold text-gray-900 mb-8 flex items-center justify-center gap-3">
                     <span class="icon-gradient p-2 rounded-lg"><i class="fas fa-moon text-white"></i></span>
@@ -564,7 +545,6 @@
                 </div>
             </div>
 
-            <!-- Platforms & Applications -->
             <div class="mb-16">
                 <h3 class="text-2xl font-bold text-gray-900 mb-8 flex items-center justify-center gap-3">
                     <span class="icon-gradient p-2 rounded-lg"><i class="fas fa-rocket text-white"></i></span>
@@ -607,7 +587,6 @@
                 </div>
             </div>
 
-            <!-- Published APIs -->
             <div class="mb-12">
                 <h3 class="text-2xl font-bold text-gray-900 mb-8 flex items-center justify-center gap-3">
                     <span class="icon-gradient p-2 rounded-lg"><i class="fas fa-plug text-white"></i></span>
@@ -644,7 +623,6 @@
         </div>
     </section>
 
-    <!-- Skills Section -->
     <section id="skills" class="py-20 bg-gray-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
@@ -653,7 +631,6 @@
             </div>
 
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Backend Skills -->
                 <div class="bg-white rounded-lg p-8 shadow-lg">
                     <h3 class="text-2xl font-bold text-gray-900 mb-6 flex items-center">
                         <i class="fas fa-server text-primary mr-3"></i>
@@ -699,7 +676,6 @@
                     </div>
                 </div>
 
-                <!-- Frontend Skills -->
                 <div class="bg-white rounded-lg p-8 shadow-lg">
                     <h3 class="text-2xl font-bold text-gray-900 mb-6 flex items-center">
                         <i class="fas fa-palette text-primary mr-3"></i>
@@ -745,7 +721,6 @@
                     </div>
                 </div>
 
-                <!-- DevOps & Tools -->
                 <div class="bg-white rounded-lg p-8 shadow-lg">
                     <h3 class="text-2xl font-bold text-gray-900 mb-6 flex items-center">
                         <i class="fas fa-tools text-primary mr-3"></i>
@@ -794,7 +769,6 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
     <section id="contact" class="py-20 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
@@ -894,7 +868,6 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="bg-gradient-to-b from-gray-900 to-gray-950 text-white py-16">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid md:grid-cols-3 gap-12">
@@ -969,19 +942,17 @@
 
             <div class="border-t border-gray-800 mt-12 pt-8 text-center">
                 <p class="text-gray-500">
-                    © <span id="current-year"></span> Hamid Ali. Built with <i class="fas fa-heart text-red-500"></i>
+                    ©2016 - <span id="current-year"></span> Hamid Ali. Built with <i
+                        class="fas fa-heart text-red-500"></i>
                     and ☕
                 </p>
             </div>
         </div>
     </footer>
 
-    <!-- JavaScript -->
     <script>
-        // Set current year in footer
         document.getElementById('current-year').textContent = new Date().getFullYear();
 
-        // Smooth scrolling for anchor links
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
